<resources>
    <string name="app_name">BT21TamagochiAndroid</string>

    <string name="your_bt21">Your BT21</string>
    <string name="cont">Continue</string>
    <string name="new_game">New Game</string>
    <string name="quit">Quit</string>
    <string name="feed">Feed</string>
    <string name="bath">Bath</string>
    <string name="sleep">Sleep</string>
    <string name="baby_koya" translatable="false">Baby Koya</string>
    <string name="love">Love:</string>
    <string name="hunger">Hunger:</string>
    <string name="dirtiness">Dirtiness:</string>
    <string name="sleepiness">Sleepiness:</string>
</resources>
